Fix page menu overlap on swal messages
CMK-27611

--- a/packages/cmk-frontend/src/themes/facelift/scss/_page_menu.scss
+++ b/packages/cmk-frontend/src/themes/facelift/scss/_page_menu.scss
@@ -689,6 +689,7 @@ div#page_menu_popups {
   }
 
   .message_content {
+    z-index: 0;
     text-align: left;
     padding-left: 15px;
   }
